# nmdc-ingest-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: mfd-project-vocabulary.md  ncbi-to-nmdc.md  nmdc-curation-rules.md  nmdc-env-triad.md  nmdc-schema-reference.md  nmdc-target-gene.md  nmdc-taxon-resolution.md
data/: README.md  mfd_envo_crosswalk.tsv  mfd_envo_crosswalk_l1.tsv  mfd_envo_crosswalk_l2.tsv  mfd_habitat_per_sample.tsv
data/mfdo-crosswalk-v2/: .gitignore  JOIN_RECIPE.md  README.md  apply_crosswalk.py  build_ontology_crosswalk.py  corine_candidates.tsv  corine_envo_map.tsv  els_allowlist.tsv  els_v5.txt  generate_els_allowlist.py  mfd_biosamples_annotated.tsv  mfd_db_to_tsv.py  mfd_gee_landcover.tsv  mfd_nominatim_geocode.tsv  mfdo_decomposed.json  mfdo_misc_param_mappings.tsv  mfdo_nmdc_crosswalk.tsv  search_envo_candidates.py  test_crosswalk_curies.py  worldcover_candidates.tsv  worldcover_envo_map.tsv
examples/: README.md
examples/biosample_set/: 01_cropland_agricultural_field.json  01_mimag_fully_resolved_envtriad.json  01_mimag_soil.json  01_typical_with_lat_lon.json  02_forest.json  02_mimag_local_sentinel.json  02_mimag_water.json  02_no_lat_lon.json  03_alternate_metagenome_taxon.json  03_grassland.json  03_mimag_broad_sentinel.json  03_mimag_sediment.json  04_mimag_both_envtriad_sentinels.json  04_mimag_no_lat_lon.json  05_metagenome_environmental_package.json  05_metagenome_environmental_with_lat_lon.json  06_metagenome_environmental_no_lat_lon.json  06_mimag_no_lat_lon.json  07_cropland_agricultural_field.json  08_no_lat_lon.json
examples/data_generation_set/: 01_metagenome_nucleotide_sequencing.json  02_metagenome_alternate_instrument.json
examples/data_object_set/: 01_metagenome_raw_reads.json
examples/microflora-danica/: README.md
examples/microflora-danica/biosample_set/: 01_cropland_agricultural_field.json  02_forest.json  03_grassland.json  04_urban_park.json  05_marine_coast_sediment.json  06_wastewater_treatment.json  07_coastal_dune.json  07_partial_sentinel_broad.json  08_no_lat_lon.json
examples/microflora-danica/data_generation_set/: 01_metagenome_nucleotide_sequencing.json  02_amplicon_sequencing_sequel.json  02_metagenome_alternate_instrument.json  03_amplicon_sequencing_promethion.json
examples/microflora-danica/data_object_set/: 01_metagenome_raw_reads.json  01_sra_sequence_data.json
examples/microflora-danica/material_processing_set/: 01_extraction.json  01_library_preparation.json  02_amplicon_library_preparation.json  02_library_preparation.json  03_amplicon_eukaryotic_library_preparation.json  03_amplicon_library_preparation.json  04_amplicon_eukaryotic_library_preparation.json
examples/microflora-danica/processed_sample_set/: 01_extracted_dna.json  01_sequencing_library.json  02_sequencing_library.json
examples/microflora-danica/study_set/: 01_research_study.json
examples/study_set/: 01_research_study.json
scripts/: README.md  apply_mfd_env_triad.py  build_mfd_envo_crosswalk_l2.py  build_mfd_habitat_table.py
src/nmdc_ingest_agent/: __init__.py  instruments.py  minting.py  validation.py
src/nmdc_ingest_agent/sources/ncbi/: README.md  __main__.py  mfd.py  translate.py
src/nmdc_ingest_agent/validators/: cli.py  extract.py  oak_config.yaml  run.py  term_validation.yaml
tests/: test_mfd.py  test_minting.py  test_translate_analyte.py  test_translate_material_processing.py  test_validation.py
